eliminação informação da sensor_historycol formatação da tabela na view.index

--- a/app/views/sensor_historys/index.html.erb
+++ b/app/views/sensor_historys/index.html.erb
@@ -1,19 +1,20 @@
 <h1>Listing Sensor History</h1>
 
 <Table>
-    <tr>
-        <th>Sensor id</th>
-        <th>Valor</th>
-        <th>Tempo</th>
-        <th>Sensor History Col</th>
-    </tr>
-
-    <% @sensor_historys.each do |history| %>
+    <thead>
         <tr>
-            <td><%= history.sensors_idsensors %></td>
-            <td><%= history.value %></td>
-            <td><%= history.time %></td>
-            <td><%= history.sensors_historycol %></td>
+            <th>Sensor id</th>
+            <th>Valor</th>
+            <th>Tempo</th>
         </tr>
-    <% end %>
+    </thead>
+    <tbody>
+        <% @sensor_historys.each do |history| %>
+            <tr>
+                <td><%= history.sensors_id %></td>
+                <td><%= history.value %></td>
+                <td><%= history.time %></td>
+            </tr>
+        <% end %>
+    </tbody>
 </Table>
