--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,16 @@
 
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
 
   </head>
 
-  <body id="page-top" style="background-image: url('img/header.jpg');background-repeat: no-repeat, repeat;">
+  <body id="page-top" style="background-image: url('img/header.jpg');background-repeat: no-repeat, repeat;    font-size: 0.9rem!important;">
 
     <!-- Navigation -->
      <nav class="navbar navbar-expand-lg navbar-light bg-light" style="opacity: 0.5;" >
@@ -41,7 +43,8 @@
       
   </div>
 </nav>
+
    <%= yield %>
   </body>
-
+  
 </html>
