CSS + buttons navbar

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,11 @@
 		<br>
 
 	</center>
+	<div style="float: right!important;">
+		<a class="btn btn-warning" style="margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-users"></i> New</a>
+		<br>
+		<br>
+	</div>
 	<table id="example" class="display" style="width:100%"> 
 		<thead>
 			<tr>
@@ -19,12 +24,16 @@
 				<td>faxer ciclo com users</td>
 				<td>--</td>
 				<td>--</td>
-				<td>--</td>
+				<td>
+					<a class="btn btn-danger" style="margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-trash-alt"></i> Delete</a>
+					<a class="btn btn-success" style="margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-pencil-alt"></i> Edit</a>
+				</td>
 			</tr>
 			
-	
+
 		</tbody>
 	</table>
+	<br>
 </div>
 
 <script type="text/javascript">
