--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
@@ -37,13 +38,18 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       
-      <li style="margin-right:25px!important; color: #aaa;"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li style=" color: #aaa;"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li style="margin-right:25px!important; color: #aaa;"><a href="#"> Sign Up</a></li>
+      <li style="margin-right:25px!important; color: #aaa;"><a href="#"> Login</a></li>
+
+      <!--mostrar so para o admin o segunite-->
+      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'Users', users_path %></li>
+      <!--mostrar os meus grupos-->
+      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Groups'%></li>
+
     </ul>
       
   </div>
 </nav>
-
    <%= yield %>
   </body>
   
