--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <link href="/css/grayscale.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
     <script src="/js/bootstrap.js"></script>
+    
   </head>
 
   <body id="page-top" style="background-image: url('/img/header.jpg');background-repeat: no-repeat, repeat;    font-size: 0.9rem!important;">
@@ -46,6 +47,8 @@
       <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'Users', users_path %></li>
       <!--mostrar os meus grupos-->
       <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Groups', mygroups_path %></li>
+      <!--mostrar os meus sensores-->
+      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Sensores', mySensors_path %></li>
 
     </ul>
       
