--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,8 +30,8 @@
 					Regular User
 					<% end %></td>
 					<td>
-						<a class="btn btn-danger" style="margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-trash-alt"></i> Delete</a>
-						<a class="btn btn-success" style="margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-pencil-alt"></i> Edit</a>
+						<a class="btn btn-danger" style="  color: white;margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-trash-alt"></i> Delete</a>
+						<a class="btn btn-success" style="  color: white;margin:0px!important;padding: 5px!important;text-transform: none!important;"><i class="fas fa-pencil-alt"></i> Edit</a>
 					</td>
 				</tr>
 				<% end %>
