Started-> alert index template

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,8 @@
       <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Groups', mygroups_path %></li>
       <!--mostrar os meus sensores-->
       <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Sensores', mySensors_path %></li>
+      <!--mostrar os meus alertas-->
+      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Alerts', myAlerts_path %></li>
 
     </ul>
       
