--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>LogSensor</title>
+  <title>LogSensor</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
+  <!-- Custom fonts for this template -->
 
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <!-- Custom styles for this template -->
-    <link href="/css/grayscale.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    
-  </head>
+  <!-- Custom styles for this template -->
+  <link href="/css/grayscale.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+  <script src="/js/bootstrap.js"></script>
 
-  <body id="page-top" style="background-image: url('/img/header.jpg');background-repeat: no-repeat, repeat;    font-size: 0.9rem!important;">
+</head>
 
-    <!-- Navigation -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-light " style="opacity: 0.5;" >
-  <a class="navbar-brand" href="/">LogSensor</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
+<body id="page-top" style="background-image: url('/img/header.jpg');background-repeat: no-repeat, repeat;    font-size: 0.9rem!important;">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light " style="opacity: 0.5;" >
+    <a class="navbar-brand" href="/">LogSensor</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <% if session[:user_id]==nil%>
+        <li style="margin-right:25px!important; color: #aaa;"><a href="<%= login_path  %>"> Login</a></li>
+        <% else %>
+        <li style="margin-right:25px!important; color: #aaa;"><a href="<%= logout_path %>"> LogOut</a></li>
+        <% if @isAdmin==1 %>
+        <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'Users', users_path %></li>
+        <%end %>
+        <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Groups', mygroups_path %></li>
+        <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Sensores', mySensors_path %></li>
+        <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Alerts', myAlerts_path %></li>
+        <%end%>
+        
+
+      </ul>
       
-      <li style="margin-right:25px!important; color: #aaa;"><a href="#"> Sign Up</a></li>
-      <li style="margin-right:25px!important; color: #aaa;"><a href="#"> Login</a></li>
+    </div>
+  </nav>
+  <%= yield %>
+</body>
 
-      <!--mostrar so para o admin o segunite-->
-      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'Users', users_path %></li>
-      <!--mostrar os meus grupos-->
-      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Groups', mygroups_path %></li>
-      <!--mostrar os meus sensores-->
-      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Sensores', mySensors_path %></li>
-      <!--mostrar os meus alertas-->
-      <li style="margin-right:25px!important; color: #aaa;"><%= link_to 'My Alerts', myAlerts_path %></li>
-
-    </ul>
-      
-  </div>
-</nav>
-   <%= yield %>
-  </body>
-  
 </html>
