--- a/app/views/groups_controller/index.html.erb
+++ b/app/views/groups_controller/index.html.erb
@@ -27,7 +27,7 @@
 			<thead>
 				<tr>
 					<th>Name</th>
-					<th>Sensor in Group</th>
+					<th>Sensors in Group</th>
 					<th>Actions</th>
 				</tr>
 			</thead>
