Correção parcial da DB,controler e view

--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -21,7 +21,7 @@
 				<label class="col-md-4 control-label">Password</label>
 
 				<div class="col-md-6">
-					<input type="password" class="form-control"  formnovalidate="<%= link_to 'Error', edit_error_path(password) %>">
+					<input type="password" class="form-control"  formnovalidate="">
 
 				</div>
 			</div>
